feat:  otimizado fluxo de adicionar/remover favoritos e  adicionado feature de wishlist

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.analysis.extraPaths": ["./routes-functions"]
+  "python.analysis.extraPaths": ["./routes-functions"],
+  "cSpell.words": ["jsonify"]
 }
